fixed navigation bar overlapping login buttons.

--- a/css/index.css
+++ b/css/index.css
@@ -534,7 +534,7 @@ header {
 header .navMain {
   position: absolute;
   margin: 1rem;
-  width: 98.5%;
+  width: 75%;
 }
 header .navTop {
   overflow: hidden;
